After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709262 - GstStructure's documentation incorrectly warns that empty strings don't work in any GstStructure
GstStructure's documentation incorrectly warns that empty strings don't work ...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
1.2.0
Other All
: Normal minor
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-02 13:01 UTC by Stewart Brodie
Modified: 2013-12-06 20:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for GstStructure and GstTagList documentation to fix documentation to match behaviour (1.54 KB, patch)
2013-10-30 12:05 UTC, Stewart Brodie
needs-work Details | Review

Description Stewart Brodie 2013-10-02 13:01:22 UTC
The documentation at the top of gst/gststructure.c claims that empty strings do not work as property values in GstStructures.  It should say that empty strings do not work only when the GstStructure is a TAGLIST.

There was a brief time when the statement was true, but it was quickly fixed by 
change 7bf3554228f52e06e465fc02d31ac4b1b267ff7d in July 2009, but the comment was never fixed.

The warning about empty and NULL probably ought to be added to gst/gsttaglist.c as well, at the place where it also warns about values needing to be valid UTF-8.

Affects 0.10.x and 1.0.x codelines as well as 1.2.0
Comment 1 Sebastian Dröge (slomo) 2013-10-02 13:06:04 UTC
Seems correct, do you want to provide a patch for this?
Comment 2 Stewart Brodie 2013-10-30 12:05:02 UTC
Created attachment 258562 [details] [review]
Patch for GstStructure and GstTagList documentation to fix documentation to match behaviour
Comment 3 Sebastian Dröge (slomo) 2013-11-01 13:31:02 UTC
Comment on attachment 258562 [details] [review]
Patch for GstStructure and GstTagList documentation to fix documentation to match behaviour

Please provide this as a patch in "git format-patch" format :)

Also don't mention GstTagList in the GstStructure documentation and the other way around, that GstTagList is a GstStructure is an implementation detail and hidden in 1.0.

Apart from that neither NULL nor empty strings are allowed in taglists (both cause failures). Both are allowed in GstStructures though.
Comment 4 Tim-Philipp Müller 2013-12-06 20:54:07 UTC
Pushed with modifications, thanks for the bug report and the patch!

 commit e7f514efbc32646b86024de4d42aa120de52d971
 Author: Stewart Brodie <stewart@eh.org>
 Date:   Fri Dec 6 20:50:19 2013 +0000

    docs: clarify encoding of strings in GstStructures and taglists
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709262