docs: clarify encoding of strings in GstStructures and taglists

https://bugzilla.gnome.org/show_bug.cgi?id=709262